--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -118,12 +118,14 @@
 	
 }
 	
-	
-@MISC{Boehm81,
-   	author = {Boehm, Barry W. },
-    	title = {Software Engineering Economics},
-    	year = {1981},
-	tags= {Pattern; Software Engineering}
+
+@BOOK{Boehm81,
+  author = {Barry W. Boehm},
+  title = {Software Engineering Economics},
+  publisher = {Prentice Hall},
+  year = {1981},
+  tags= {Pattern; Software Engineering},
+  address = {Englewood Cliffs, NJ}
 }
 
 @BOOK{Schwaber2004,
@@ -224,9 +226,9 @@
     author = "{Mountain Goat Software}", 
     publisher = "Mountain Goat Software", 
     title = "Scrum Overview", 
-    month="April",
-    year = "2014", 
-    url = "http://epf.eclipse.org/wikis/scrum/",}
+    url = "http://epf.eclipse.org/wikis/scrum/",
+    note = "Version: 08.Dezember 2014"
+
     
   }
   
@@ -297,10 +299,9 @@
     author = "{Sparkling Consulting}", 
     publisher = "Sparkling Consulting", 
     title = "Open Unified Process (OpenUP)", 
-    month="April",
-    year = "2014", 
       tags= {Pattern; Software Engineering},
-    url = "http://www.itpractices.org/Live/framework/openup"}
+    url = "http://www.itpractices.org/Live/framework/openup"},
+   note = "Version: 08.Dezember 2014"
     
   }
   
@@ -318,15 +319,17 @@
     publisher = "Eclipse", 
     month="August",
     year = "2007", 
-    url = "http://www.eclipse.org/epf/general/OpenUP.pdf",}
+    url = "http://www.eclipse.org/epf/general/OpenUP.pdf",
+    note = "Version: 08.Dezember 2014"
+
     
   }
   
   @MISC{OpenUPProcess,
   author = {IBM CORP},
   title = {OpenUP Process Version 1.5.0.4},
-  year = {2009},
   url = {http://epf.eclipse.org/wikis/openup/},
+   note = "Version: 08.Dezember 2014"
  
 }
 
@@ -501,9 +504,8 @@ address = {Ulm}
     author = "{Mountain Goat Software}", 
     title = "BPMN Offensive Berlin", 
     publisher = "Mountain Goat Software", 
-    month="April",
-    year = "2014", 
-    url = "http://www.bpmb.de/index.php/BPMNPoster",}
+    url = "http://www.bpmb.de/index.php/BPMNPoster",
+   note = "Version: 08.Dezember 2014"
     
   }
   
@@ -601,9 +603,8 @@ pages={1-23}
     author = "{Eclipse}", 
     publisher = "Eclipse", 
     title = "Eclipse Scrum Library", 
-    month="July",
-    year = "2014", 
-    url = "http://www.eclipse.org/epf/downloads/praclib/praclib_downloads.php"}
+    url = "http://www.eclipse.org/epf/downloads/praclib/praclib_downloads.php",
+   note = "Version: 08.Dezember 2014"
     
   }
   
@@ -655,8 +656,8 @@ YEAR = {2013}
 author={Bregenzer, Stefan},
 title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
 url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strategisches- prozessmodell-in-bpmn/},
-month={august},
-year={2014}}
+   note = "Version: 08.Dezember 2014"
+ }
 
 
 @phdthesis{thesis_maja,
