--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -14,7 +14,7 @@ Software Engineering besteht aus mehreren Schichten (Abbildung \ref{fig:Schichte
 \end{center}
 \end{figure}
 
-Somit ist für Software Engineering in erster Linie in der Schicht Qualitätsaspekte ein diszipliniertes Qualitätsmanagement notwendig. Weiterhin ist eine Prozessschicht vorhanden, um die termingerechte Ablieferung von Software zu gewährleisten. In der Methoden-Schicht wird sodann die Implementierung unter Zuhilfenahme von Anforderungsanalysen, Design und Programmierung durchgeführt. Hierbei werden Werkzeuge zur Automatisierung in Software- Dokumentenprozessen benutzt. Software Engineering stellt somit letztendlich eine Kombination aus Prozessen, Methoden und Tools dar, um eine qualitativ hochwertige Software zu entwickeln \cite{Puntambekar2007}.
+Somit ist für Software Engineering in erster Linie in der Schicht Qualitätsaspekte ein diszipliniertes Qualitätsmanagement notwendig. Weiterhin ist eine Prozessschicht vorhanden, um die termingerechte Ablieferung von Software zu gewährleisten. In der Methoden-Schicht wird sodann die Implementierung unter Zuhilfenahme von Anforderungsanalysen, Design und Programmierung durchgeführt. Hierbei werden Werkzeuge zur Automatisierung in Software-Dokumentenprozessen benutzt. Software Engineering stellt somit letztendlich eine Kombination aus Prozessen, Methoden und Tools dar, um eine qualitativ hochwertige Software zu entwickeln \cite{Puntambekar2007}.
 
 \section{Softwareentwicklungsprozesse}\label{sec:chapter.2: Softwareentwicklungsprozesse}
 
@@ -29,7 +29,7 @@ Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von S
 \begin{figure}[htp]
 \begin{center} 
   \includegraphics[width= 0.8\linewidth]{Softwareprozess} %pdf, jpg, png...
-  \caption{Phasen Softwareprozess nach \cite{Hanser2010}}
+  \caption{Phasen des Softwareprozesses nach \cite{Hanser2010}}
   \label{fig:SEProzess}
 \end{center}
 \end{figure}
