--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -29,7 +29,7 @@ Um den systematischen Aufbau der imperativen und deklarativen Prozessmodelle zu 
 
 \subsection{Relevanz}
 
-Beim Vergleich der Relevanz der Prozessmodelle sollen die mit BPMN bzw. ConDec modellierten Prozessmodelle dahingehend verglichen werden, in wie weit es möglich ist die Prozessmodelle mit den minimal relevanten Informationen zu erstellen. Hier kann wiederum die Eignung der beiden Prozessmodellierungssprachen sehr gut verglichen werden, da falls mit einer Prozessmodellierungssprache nicht alle minimal relevanten Informationen des Metamodells abgebildet werden können, ist diese weniger zum Modellieren geeignet \cite{journals95, freund2007,reinshagen2009}. 
+Beim Vergleich der Relevanz der Prozessmodelle sollen die mit BPMN bzw. ConDec modellierten Prozessmodelle dahingehend verglichen werden, in wie weit es möglich ist, die Prozessmodelle mit den minimal relevanten Informationen zu erstellen. Hier kann wiederum die Eignung der beiden Prozessmodellierungssprachen sehr gut verglichen werden, da falls mit einer Prozessmodellierungssprache nicht alle minimal relevanten Informationen des Metamodells abgebildet werden können, ist diese weniger zum Modellieren geeignet \cite{journals95, freund2007,reinshagen2009}. 
 
 \subsubsection{A 3.1}
 
@@ -52,7 +52,7 @@ Somit sollen beim Vergleich in Kapitel 5 die Anzahl an Sequenzfluss/Existenz Con
 Zudem soll untersucht werden, ob bei dem mit ConDec erstellten Modell ein klarer Einstiegspunkt mit Hilfe des Init-Constraints dargestellt werden kann. Das Init-Constraint kann bei ConDec nur einer einzigen Aktivität im Modell zugewiesen werden. Kommen mehrere Aktivitäten als Einstiegspunkt im Modell in Frage, so lassen sich diese in ConDec nicht klar kennzeichnen. Es existieren Studien darüber \cite{haisjackl2014understanding}, dass sich dies negativ auf das Verständnis von ConDec Modellen auswirkt. \newline
 
 \subsubsection{A 4.3}
-Weiterhin soll hier festgestellt werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des Prozessmodells. Falls es Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des Prozessmodelles gibt, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Modelle ziehen.
+Weiterhin soll hier festgestellt werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des Prozessmodells. Falls sich Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des Prozessmodelles ergeben, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Modelle ziehen.
 
 \subsection{Wirtschaftlichkeit der Prozessmodelle}
 
