--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -7,19 +7,15 @@ In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec - und BPMN-Mod
 
 \textbf{Richtigkeit}: 
 
-
 Es soll geprüft werden, ob sich die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten negativ auf das Verständnis der Prozessmodelle auswirkt. Dabei wird überprüft, ob Modelle, in den Rollen und/oder Artefakte vorkommen, bei den deklarativen Modellen sehr viel schlechtere Punktzahlen herauskommen, als bei den imperativen Modellen.\newline
 
-
 \textbf{Systematischer Aufbau}: 
-
 
 Auch hier soll anhand der erreichten Punktzahl bei BPMN-Modellen mit Artefakten im Modell und den entsprechenden deklarativen Modellen ohne Artefakte im Modell getestet werden, ob fehlende Artefakte einen negativen Einfluss auf das Verständnis haben. Weiterhin sollen auch die Meinungsfragen und die zugehörigen Antworten der Teilnehmer dahingehend untersucht werden.\newline
 
 \textbf{Relevanz}: 
 
 Hier soll genau wie bei \textit{Richtigkeit} der Einfluß von Artefakten und Rollen auf das Verständnis getestet werden.
-
 
 \textbf{Klarheit}: 
 
@@ -33,7 +29,6 @@ Da im Rahmen dieser Studie von den Probanden keine Modelle erstellt werden lasse
 \textbf{Vergleichbarkeit}: 
 
 Untersucht wird hier, ob sich die Punktzahlen bei Modellen, bei denen es zwischen BPMN und ConDec Unterschiede in der Größe gibt, auch Unterschiede in den Punktzahlen ergeben und wiederum sollen die Grenzen der Darstellbarkeit von ConDec (Rollen, Artefakte) in Bezug auf das Verständnis untersucht werden.\newline
-
 
 \section{Design der Studie}
 
@@ -60,7 +55,7 @@ Die Teilnehmer konnten bei der Beantwortung der Fragen zwischen vier Antwortmög
 
 \subsection{Umfragewerkzeug und Durchführung}
 
-Zur Durchführung wurde das Fragebogenwerkzeug \textit{Limesurvey} verwendet. Der entsprechende Link zum Fragebogen sowie eine kleine Legende zur Notationsübersicht von Declare und BPMN wurde den Teilnehmern per E-Mail zugeschickt. Die entsprechenden Antworten der Probanden wurden automatisch von \textit{Limesurvey} gespeichert. Weiterhin war es dort möglich, die jeweilige Zeit, welche die Probanden zur Bearbeitung Verständnisfragen benötigt haben, mit zu messen. Die gespeicherten Daten können aus \textit{Limesurvey} für verschiedene externe Anwendungen exportiert werden (z.B. Excel, CSV oder für SPSS).
+Zur Durchführung wurde das Fragebogenwerkzeug \textit{Limesurvey} verwendet. Der entsprechende Link zum Fragebogen sowie eine kleine Legende zur Notationsübersicht von Declare und BPMN wurde den Teilnehmern per E-Mail zugeschickt. Die entsprechenden Antworten der Probanden wurden automatisch von \textit{Limesurvey} gespeichert. Die gespeicherten Daten können aus \textit{Limesurvey} für verschiedene externe Anwendungen exportiert werden (z.B. Excel, CSV oder für SPSS).
 
 \subsection{Auswertung}
 
