--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -3,9 +3,7 @@
 	title= {Geschäftsprozessanalyse: Ereignisgesteuerte Prozessketten und objektorientierte 			  Geschäftsprozessmodellierung für betriebswirtschaftliche Standardsoftware},
 	year= {2006},
 	tags= {Pattern; Software Engineering},
-	publisher= {Springer},
-	address = {Heidelberg}
-
+	publisher= {Springer}
 }
 
 @BOOK{koch2011,
@@ -13,26 +11,24 @@
 	title= {Einführung in das Management von Geschäftsprozessen},
 	year= {2011},
 	tags= {Pattern; Software Engineering},
-	publisher= {Springer},
-	address = {Heidelberg}
-}
+	publisher= {Springer}
+	}
 
 @BOOK{Stoerrle2005,
 	author = {St{\"o}rrle, Harald},
 	title = {UML 2 f\"ur Studenten},
 	year = {2005},
 	tags= {Pattern; Software Engineering},
-	publisher = {Pearson Studium},
-	address = {M\"unchen}
-}
+	publisher = {Pearson Studium}
+	}
 
 @BOOK{Mishra2012,
 	author = {Mishra, Jibitesh and Mohanty, Ashok},
 	title = {Software Engineering},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
-	publisher = {Pearson Studium},
-	address = {New Delhi}
+	publisher = {Pearson}
+	
 }
 
 @BOOK{Koelmel2000,
@@ -49,26 +45,23 @@
 	title = {Software Engineering},
 	year = {2007},
 	tags= {Pattern; Software Engineering},
-	publisher = {Technical Publications Pune},
-	address = {Pune}
-}
+	publisher = {Technical Publications}
+	}
 
 @BOOK{Specker1998,
 	author = {Specker, Adrian},
 	title = {Kognitives Software Engineering},
 	year = {1998},
 	tags= {Pattern; Software Engineering},
-	publisher = {vdf Hochschulverlag AG},
-	address = {Zürich}
-}
+	publisher = {vdf Hochschulverlag AG}
+	}
 
 @BOOK{Booch1993,
 	author = {Doug, Bryan  and Booch, Grady},
 	title = {Software Engineering with ADA},
 	year = {1993},
 	tags= {Pattern; Software Engineering},
-	edition={3},
-	publisher = {Addison Wesley Pub Co Inc}
+	publisher = {Addison Wesley}
 	}
 		
 @article{ross1975software,
@@ -89,9 +82,7 @@
 	title = {Agile Prozesse},
 	year = {2010},
 	tags= {Pattern; Software Engineering},
-	publisher= {Springer},
-	address={Heidelberg}
-	
+	publisher= {Springer}	
 }
 	
 @article{Hesse2008,
@@ -102,10 +93,8 @@
 	volume={31},
 	number={5},
 	pages={377-393},
-	 tags= {Pattern; Software Engineering},
-	publisher={Springer},
-	address={Heidelberg}
-}
+	 tags= {Pattern; Software Engineering}
+	 	}
 
 
 @BOOK{Grechenig2010,
@@ -113,9 +102,7 @@
 	title = {Softwaretechnik},
 	year = {2010},
 	 tags= {Pattern; Software Engineering},
-	publisher = {Pearson Studium},
-	address = {München}
-	
+	publisher = {Pearson Studium}	
 }
 	
 
@@ -125,7 +112,6 @@
   publisher = {Prentice Hall},
   year = {1981},
   tags= {Pattern; Software Engineering},
-  address = {Englewood Cliffs, NJ}
 }
 
 @BOOK{Schwaber2004,
@@ -133,9 +119,8 @@
 	title = {Agile Project Management with Scrum},
 	year = {2004},
 	 tags= {Pattern; Software Engineering},
-	publisher = {Microsoft Press},
-	address = {MRedmond}	
-}
+	publisher = {Microsoft Press}
+	}
 
 @book {Henning2011,
 	author = {Wolf, Henning},
@@ -143,8 +128,7 @@
 		 Projektmanagementansatz},
 	year = {2011},
 	 tags= {Pattern; Software Engineering},
-	publisher = {Addison-Wesley},
-	address = {München}
+	publisher = {Addison-Wesley}
 }
 
 @book {Pries2011,
@@ -152,8 +136,7 @@
 	title = {Scrum project management},
 	year = {2011},
 	 tags= {Pattern; Software Engineering},
-	address = {Boca Raton, Fla. [u.a.]},
-	publisher = {Woodhead Publishing Limited}
+	 publisher = {Woodhead Publishing Limited}
 }
 
 @book {Lacey2012,
@@ -161,9 +144,7 @@
 	title = {The Scrum field guide: practical advice for your first year},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
-	publisher = {Addison-Wesley Professional},
-	address = {[S.l.]}
-	
+	publisher = {Addison-Wesley}	
 }
 
 @book {Keith2010,
@@ -171,9 +152,8 @@
 	title = {Agile game development with Scrum: Description based on print version record},
 	year = {2010},
 	tags= {Pattern; Software Engineering},
-	publisher = {Addison-Wesley},
-	address = {Upper Saddle River, N.J.}
-}
+	publisher = {Addison-Wesley}
+	}
 
 @book {Pichler2010,
 	author = {Pichler, Roman},
@@ -181,18 +161,15 @@
 	Description based on print version record},
 	year = {2010},
 	tags= {Pattern; Software Engineering},
-	publisher = {Addison-Wesley},
-	address = {Upper Saddle River, N.J.}
-}
+	publisher = {Addison-Wesley}
+	}
 
 @book {Schwaber2007,
 	author = {Schwaber, Ken},
 	title = {The enterprise and Scrum},
 	year = {2007},
 	tags= {Pattern; Software Engineering},
-	publisher = {Microsoft Press},
-	address = {MRedmond}
-
+	publisher = {Microsoft Press}
 }
 
 @book {Wolf2011,
@@ -201,8 +178,7 @@
 	Projektmanagementansatz},
 	year = {2011},
 	tags= {Pattern; Software Engineering},
-	publisher = {Addison-Wesley},
-	address = {München}
+	publisher = {Addison-Wesley}
 }
 
 @book {Pham2012,
@@ -210,14 +186,19 @@
 	title = {Scrum in action: agile software project management and development},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
-	publisher = {Course Technology},
-	address = {Boston, Mass.}	
-}
+	publisher = {Course Technology}
+	}
+	
+	
+
+
 
 @article{Takeuchi1986,
 	  author = {Takeuchi, Hirotaka and Nonaka, Ikujiro},
+	    title = {The New New Product Development Game},
   	  journal = {Harvard Business Review},
-  	  title = {The New New Product Development Game},
+	  	volume={86},
+		pages={137-146},
  	  year = {1986},
 	  tags= {Pattern; Software Engineering}
 }
@@ -237,19 +218,16 @@
   title={Das V-Modell XT},
   year={2008},
   tags= {Pattern; Software Engineering},
-  publisher={Springer},
-  address={Heidelberg}
-}
+  publisher={Springer}
+  }
 
 @inproceedings{Kuhrmann2011,
 	  author = {Kuhrmann, Marco and Lange, Christian and Schnackenburg, André},
   	  booktitle = {EuroSPI},
-	  editor = {O'Connor, Rory and Pries-Heje, Jan and Messnarz, Richard},
  	  pages = {49-60},
 	  year={2011},
 	  tags= {Pattern; Software Engineering},
-  	  publisher = {Springer},
-	  address={Heidelberg}
+  	  publisher = {Springer}
 	  }
 	  
  @book{Zoerner2012,
@@ -257,15 +235,13 @@
   title={Software-Architekturen Dokumentieren und Kommunizieren},
   year={2012},
   tags= {Pattern; Software Engineering},
-  publisher={Carl Hanser Verlag},
-  adress={München}
-}
+  publisher={Carl Hanser Verlag}
+  }
 
 
-@proceedings{Wang2007,
- editor    = {Wang, Qing and
-               Pfahl, Dietmar and
-               Raffo, David M. },
+@inproceedings{pfahl2007software,
+  title={Software Process Dynamics and Agility},
+  author={Pfahl, D and Raffo, David M},
   title     = {Software Process Dynamics and Agility, International Conference
                on Software Process, ICSP 2007, Minneapolis, MN, USA, May
                19-20, 2007, Proceedings},
@@ -273,15 +249,14 @@
   volume    = {4470},
   year      = {2007},
   tags= {Pattern; Software Engineering},
-  publisher = {Springer},
-  address={Heidelberg}
+  publisher = {Springer}
 
 }
 
-@article{hauber2010,
+@article{hauber2010,pages={1--23},
   author={Hauber, Rudolf and Muth, Bertil},
   title={Architekturprozesse--Systeme systematisch entwickeln},
-  journal={URL: www. sigs-datacom. de (Zugriffsdatum: 22. 03. 2013)},
+  journal={URL: www. sigs-datacom. de},
   year={2010},
     tags= {Pattern; Software Engineering}
 }
@@ -291,8 +266,9 @@
   	author={Gau, Thosten},
  	 journal={Objekt Spektrum,(November/Dezember 2006-6)},
 	 tags= {Pattern; Software Engineering},
+	   year={2006},
   	pages={42--47},
-	year={2006}
+	
 }
 
 @misc{openup, 
@@ -300,7 +276,7 @@
     publisher = "Sparkling Consulting", 
     title = "Open Unified Process (OpenUP)", 
       tags= {Pattern; Software Engineering},
-    url = "http://www.itpractices.org/Live/framework/openup"},
+    url = "http://www.itpractices.org/Live/framework/openup",
    note = "Version: 08.Dezember 2014"
     
   }
@@ -310,7 +286,8 @@
   title={Evaluierung der Potentiale des Eclipse Process Frameworks},
   journal={Modellbasierte Softwareentwicklung},
    tags= {Pattern; Software Engineering},
-  pages={34}
+  pages={34},
+  year={2009}
 }
 
 @misc{eclipseopenup, 
@@ -337,9 +314,8 @@
  author={El-Haik, Basem  and Shaout, Adnan },
  title={Software Design For Six Sigma: A Roadmap For Excellence},
  year={2010},
- publisher={Wiley},
- address={Hoboken, N.J.}
-}
+ publisher={Wiley}
+ }
 
 @book{ambler2012,
   author={Ambler, S.W. and Lines, M.},
@@ -361,8 +337,7 @@
   author={H{\"o}hn, Reinhard  and Rausch, A.  and Broy, M.  and  H{\"o}ppner, Stephan and Bergner, K.  and Petrasch, R. and Biffl, S. and Wagner, R. and Hesse, W.},
   title={Das V-Modell XT: Grundlagen, Methodik und Anwendungen},
   year={2008},
-  publisher={Springer},
-  address={Heidelberg}
+  publisher={Springer}
 }
 
 @book{brack2010,
@@ -387,11 +362,15 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
 address = {Ulm}
 }
 
+
+
 @inproceedings{kaschek1998,
   author={Kaschek, Roland},
+  booktitle= {Modellierung '98, Proceedings des GI-Workshops in M{\"{u}}nster, 11.-13. M{\"{a}}rz 1998},
   title={Proze{\ss}ontologie als Faktor der Gesch{\"a}ftsproze{\ss}modellierung.},
   booktitle={Modellierung},
-  year={1998}
+  year={1998},
+    publisher = {CEUR-WS.org}
 }
 
 @article{journals95,
@@ -399,9 +378,9 @@ address = {Ulm}
     title = {Grundsätze ordnungsmäßiger Modellierung.},
    journal = {Wirtschaftsinformatik},
   number = 5,
+    year = {1995},
   pages = {435--445},
   volume = 37,
-  year = 1995
 }
 
 @book{freund2007,
@@ -428,7 +407,7 @@ address = {Ulm}
 @inproceedings{pichler2012,
  author={Pichler, Paul and Weber, Barbara and Zugal, Stefan and Pinggera, Jakob and Mendling, Jan and Reijers, Hajo A},
   title={Imperative versus declarative process modeling languages: An empirical investigation},
-  booktitle={Business Process Management Workshops},
+  booktitle={Business Process Management Workshops, LNBIP 99,},
   pages={383--394},
   year={2012},
   organization={Springer}
@@ -489,14 +468,16 @@ address = {Ulm}
   author={Krallmann, H. and Bobrik, A. and Levina, O.},
   title={Systemanalyse im Unternehmen: Prozessorientierte Methoden der Wirtschaftsinformatik},
   year={2013},
-  publisher={Oldenbourg Wissenschaftsverlag}
+  publisher={Oldenbourg}
 }
 
-@article{white2004,
-  author={White, Stephen A},
+@article{white2004introduction,
   title={Introduction to BPMN},
+  author={White, Stephen A},
   journal={IBM Cooperation},
   volume={2},
+  number={0},
+  pages={0},
   year={2004}
 }
 
@@ -521,16 +502,14 @@ address = {Ulm}
 @inproceedings{pesic2007declare,
   author={Pesic, Maja and Schonenberg, Helen and van der Aalst, Wil MP},
   title={Declare: Full support for loosely-structured processes},
-  booktitle={Enterprise Distributed Object Computing Conference, 2007. EDOC 2007. 11th IEEE International},
-  pages={287--287},
-  year={2007},
- publisher={IEEE}
+  booktitle={11th IEEE International Enterprise Distributed Object Computing Conference, 2007.},
+  pages={287--287}
 }
 
 @inproceedings{fahland2010,
   author={Fahland, Dirk and Mendling, Jan and Reijers, Hajo A and Weber, Barbara and Weidlich, Matthias and Zugal, Stefan},
   title={Declarative versus imperative process modeling languages: the issue of maintainability},
-  booktitle={Business Process Management Workshops},
+  booktitle={Business Process Management Workshops, LNBIP},
   pages={477--488},
   year={2010},
   publisher={Springer}
@@ -539,6 +518,8 @@ address = {Ulm}
 @inproceedings{pesic2006,
   author={Pesic, Maja and van der Aalst, Wil MP},
   title={A declarative approach for flexible business processes management},
+  number =  {4103},
+series={Lecture Notes in Computer Science},  
   booktitle={Business Process Management Workshops},
   pages={169--180},
   year={2006},
@@ -548,7 +529,6 @@ address = {Ulm}
 @book{montali2010,
   author={Montali, Marco},
   title={Specification and verification of declarative open interaction models: A logic-based approach},
-  volume={56},
   year={2010},
   publisher={Springer}
 }
@@ -556,8 +536,8 @@ address = {Ulm}
 @incollection{Pesic200,
 author={Aalst, W.M.P. and Pesic, M.},
 booktitle={Web Services and Formal Methods},
+number =  {06291},
 series={Lecture Notes in Computer Science},
-editor={Bravetti, Mario and Núñez, Manuel and Zavattaro, Gianluigi},
 title={DecSerFlow: Towards a Truly Declarative Service Flow Language},
 year={2006},
 publisher={Springer Berlin Heidelberg},
@@ -569,7 +549,6 @@ pages={1-23}
            title = {Collaboration features in current BPM tools},
           volume = {32},
           number = {1},
-           month = {January},
        publisher = {Gesellschaft f{\''u}r Informatik e.V.},
             year = {2012},
          journal = {EMISA Forum},
@@ -593,11 +572,10 @@ pages={1-23}
 @inproceedings{list2006evaluation,
   author={List, Beate and Korherr, Birgit},
   title={An evaluation of conceptual business process modelling languages},
-  booktitle={Proceedings of the 2006 ACM symposium on Applied computing},
+  booktitle={Proceedings of the 2006 ACM symposium on applied computing},
   pages={1532--1539},
-  year={2006},
-  organization={ACM}
-}
+  year={2006}
+  }
 
 @misc{eclipseScrum, 
     author = "{Eclipse}", 
@@ -611,6 +589,8 @@ pages={1-23}
   @inproceedings{bpm07,
   author = {Mendling, J. and Reijers, H.A. and Cardoso, J.},
     title = {What Makes Process Models Understandable?},
+    number =  {4714},
+series={Lecture Notes in Computer Science},  
   booktitle = {International Conference on Business Process Management (BPM 2007)},
   editor = {Alonso, G. and Dadam, P. and Rosemann, M.},
    pages = {48--63},
@@ -625,12 +605,14 @@ pages={1-23}
 
 @article{sabrina942,
           author = {Zugal,Stefan and Soffer, Pnina and Haisjackl, Cornelia and Pinggera, Jakob  and 				Reichert, Manfred and Weber, Barbara},
-           title = {Investigating expressiveness and understandability of hierarchy in declarative business 		process models},
+           title = {Investigating expressiveness and understandability of hierarchy in declarative business process models},
             year = {2013},
-           journal = {Software \& Systems Modeling}}
+           journal = {Software \& Systems Modeling},
+           pages={1--23}
+           }
 
-@Masterthesis{Menhorn2014,
-type={Bachelorarbeit},
+@phdthesis{Menhorn2014,
+  TYPE = {Bachelorarbeit},
 author={Menhorn, Nicole},
 title={Analyse und Überführung von Softwareentwicklungsprozessen in die standardisierte BPMN Notation},
 year={2014},
@@ -655,7 +637,7 @@ YEAR = {2013}
 @misc{Bregenzer2014,
 author={Bregenzer, Stefan},
 title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
-url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strategisches- prozessmodell-in-bpmn/},
+url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-strategisches- prozessmodell-in-bpmn/},
    note = "Version: 08.Dezember 2014"
  }
 
@@ -663,7 +645,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 @phdthesis{thesis_maja,
   author = {Pesic, M.},
   type = {PhD Thesis},
-  title = {{Constraint-based Workflow Management Systems: Shifting Control to Users}},
+  title = {Constraint-based Workflow Management Systems: Shifting Control to Users},
   school = {Eindhoven University of Technology},
   year = 2008
 }
@@ -671,8 +653,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 @inproceedings{gruhn2006complexity,
   author={Gruhn, Volker and Laue, Ralf},
   title={Complexity metrics for business process models},
-  booktitle={9th international conference on business information systems (BIS 2006)},
-  volume={85},
+  booktitle={9th international conference on business information systems},
   pages={1--12},
   year={2006}
 }
@@ -689,7 +670,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 @article{reijers2011study,
   author={Reijers, Hajo A and Mendling, Jan},
   title={A study into the factors that influence the understandability of business process models},
-  journal={Systems, Man and Cybernetics, Part A: Systems and Humans, IEEE Transactions on},
+  journal={IEEE Transactions on Systems, Man and Cybernetics, Part A: Systems and Humans},
   volume={41},
   number={3},
   pages={449--462},
@@ -700,6 +681,8 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 @article{recker2007does,
   author={Recker, Jan C and Dreiling, Alexander},
   title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
+    journal={18th Australasian Conference on Information Systems},
+  pages={356--366},
   year={2007},
   publisher={University of Southern Queensland}
 }
@@ -707,10 +690,8 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 @inproceedings{gruhn2006adopting,
   author={Gruhn, Volker and Laue, Ralf},
   title={Adopting the cognitive complexity measure for business process models},
-  booktitle={Cognitive Informatics, 2006. ICCI 2006. 5th IEEE International Conference on},
-  volume={1},
+  booktitle={5th IEEE International Conference on Cognitive Informatics, 2006.},
   pages={236--241},
-  year={2006},
   organization={IEEE}
 }
 
@@ -738,7 +719,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
   title={Einf{\"u}hrung in die Informatik},
   author={Gumm, H.P. and Sommer, M.},
   year={2012},
-  publisher={Oldenbourg Wissenschaftsverlag}
+  publisher={Oldenbourg}
 }
 
 
