--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -1,1 +1,46 @@
-\chapter{Zusammenfassung und Ausblick}\label{sec:chapter8} In diesem Kapitel werden die erarbeiteten Ergebnisse dieser Arbeit in Kapitel 8.1 zusammengefasst. Ein Fazit der Ergebnisse der vorliegenden Arbeit folgt in Kapitel 8.2. Weiterhin wird in Kapitel 8.3 ein Ausblick auf weitere zukünftig mögliche Forschungsthemen im Bereich der Anwendbarkeit von imperativen und deklarativen Prozessmodellierungssprachen gegeben.\section{Zusammenfassung}Im Verlauf dieser Arbeit wurden zunächst in Kapitel 2 grundlegende Begriffe im Bereich Prozessmodelle erläutert. Hierfür wurde zunächst in Kapitel 2.1 der Begriff Software Engineering erklärt sowie auf dessen Ziele, dessen Prozess und dessen Prinzipien eingegangen.\newlineAnschließend wurden in Kapitel 2.2 Softwareentwicklungsprozesse vorgestellt. Weiterhin wurden Software-Projekttypen sowie Leichtgewichtige und Schwergewichtige Prozessmodelle eingeführt.\newlineIn Kapitel 3 wurden ausführlich die Grundlagen der Modellierung dargelegt. Es erfolgte zunächst eine Einführung in die Prozessmodellierung und es wurden deren Ziele sowie die Grundsätze ordnungsgemäßer Modellierung erläutert.\newlineProzessmodellierungssprachen wurden sodann in Kapitel 3.2 erläutert. Zudem wurden auch die in dieser Arbeit verwendeten imperativen und deklarativen Prozessmodellierungssprachen eingeführt.\newlineEbenso wurden in Kapitel 3.3 Modellierungswerkzeuge allgemein erklärt und es wurden die in der vorliegenden Arbeit eingesetzten Modellierungstools vorgestellt.\newlineDie Anforderungserhebung erfolgte in Kapitel 4. Hier wurden die Vergleichskriterien für den in Kapitel 5 folgenden Vergleich  festgelegt.\newlineDie Modellierung der imperativen und deklarativen Modelle der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT erfolgte in Kapitel 5. Nach einer kurzen Einführung und Analyse der Modelle wurde die imperative und deklarative Modellierung der selbigen dargelegt. Anschließend erfolgte jeweils der Vergleich der Modellierungen durch die definierten Kriterien aus Kapitel 4. In Kapitel 6.4 wurde abschließend ein Vergleich zwischen allen modellierten Prozessmodellen anhand der Anforderungskriterien aus Kapitel 4 durchgeführt. \newlineIn Kapitel 6 wurden die herausgearbeiteten Ergebnisse aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst wurden der Aufbau und der Ablauf der Studie genau erläutert. Weiterhin wurden die Ergebnisse der Studie präsentiert und ein Fazit gezogen. \newlineVerwandte Arbeiten wurden abschließend in Kapitel 7 gegenüber der vorliegenden Arbeit abgegrenzt. Hierfür wurden jeweils Arbeiten aus den Bereichen Entwicklung von Softwareentwicklungsprozessen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen vorgestellt und es wurde erläutert, in wie weit sich die vorliegende Arbeit von diesen Arbeiten abgrenzt.\section{Fazit}Die Ergebnisse der vorliegenden Arbeit zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle in Kapitel 5 ergeben. Weiterhin wurden diese Ergebnisse auch in der Studie in Kapitel 6 nochmals weitgehend bestätigt.\newlineIm Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden jedoch sind diese im Prozessmodell selbst nicht visualisierbar.\newlineZwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec, jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus, als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim interpretieren und modellieren der Modelle.\newlineSomit ist BPMN im Moment die geeignetere Modellierungssprache. Bei ConDec müsste noch nachgebessert werden um die Eignung zur Modellierung noch zu steigern.\newline\section{Ausblick}Im Laufe der Arbeit haben sich Ideen für weiter Forschungen im Bereich der Anwendbarkeit der imperativen und deklarativen Prozessmodellierungssprachen ergeben, welche jedoch in der vorliegenden Arbeit nicht fortgeführt werden konnten, da sie den Rahmen der Arbeit gesprengt hätten.\newline\textbf{Cognitive Werte für ConDec Constraints}Um den Vergleich zwischen den in BPMN und ConDec erstellten Modellen zu optimieren, sollten ebenfalls genaue Werte über den geistigen Aufwand zum Verstehen der Constraints in ConDec erhoben werden. Wie in Kapitel 4 erwähnt, existieren solche Werte für die Elemente der BPMN Notation (z.B. eine geistige Gewichtung von 1 für ein Sequenzflusselement, eine geistige Gewichtung von 4 für ein paralleles Gateway). Da keine genauen geistigen Gewichte für die Constraints in ConDec vorliegen, war der Vergleich zwischen den Modellen in der vorliegenden Arbeit nur grob möglich. Ein exakter Vergleich wäre mit der genauen Gegenüberstellung der Summen der geistigen Gewichte der jeweiligen Elemente in den BPMN und ConDec Modellen möglich.\newline\textbf{Cognitive Werte für verschiedene Elemente in Prozessmodellen}Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints.  \textbf{Erweiterung/Anpassung ConDec}Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newlineDa auch vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiteren Forschungen versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu haben.\newlineWeiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline\textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}Wie bereits in Kapitel 7 erwähnt, weist die in dieser Arbeit durchgeführte Studie dahingehend Mängel auf, dass ein großer Teil der Teilnehmer bereits über Wissen in imperativen Prozessmodellierungssprachen verfügte. Hier sollten zukünftig noch weitere Studien durchgeführt werden, bei denen mehr Personen teilnehmen, die entweder keine Erfahrungen in beiden Prozessmodellierungssprachen aufweisen oder gleich viel Wissen in beiden Prozessmodellierungssprachen mitbringen.\newline
+\chapter{Zusammenfassung und Ausblick}\label{sec:chapter8}
+ In diesem Kapitel werden die Ergebnisse dieser Arbeit in Kapitel 8.1 zusammengefasst. Ein Fazit der Ergebnisse der vorliegenden Arbeit folgt in Kapitel 8.2. Weiterhin wird in Kapitel 8.3 ein Ausblick auf weitere zukünftig mögliche Forschungsthemen im Bereich der Anwendbarkeit von imperativen und deklarativen Prozessmodellierungssprachen gegeben.
+
+\section{Zusammenfassung und Fazit}
+
+Im Verlauf dieser Arbeit wurden zunächst grundlegende Begriffe im Bereich Prozessmodelle erläutert. Hierfür wurden Softwareentwicklungsprozesse vorgestellt und es wurden Software-Projekttypen sowie Leichtgewichtige und Schwergewichtige Prozessmodelle eingeführt.\newline
+
+Weiterhin wurden die Grundlagen der Modellierung dargelegt. Es erfolgte zunächst eine Einführung in die Prozessmodellierung und es wurden deren Ziele sowie die Grundsätze ordnungsgemäßer Modellierung erläutert.\newline
+
+Prozessmodellierungssprachen wurden erläutert und es wurden die in dieser Arbeit verwendeten imperativen und deklarativen Prozessmodellierungssprachen eingeführt. Ebenso wurden Modellierungswerkzeuge allgemein erklärt und es wurden die in der vorliegenden Arbeit eingesetzten Modellierungstools vorgestellt.\newline
+
+Zudem erfolgte die Anforderungserhebung für den vergleich von imperativen und deklarativen Prozessmodellierungsansätzen Vergleich festgelegt.\newline
+
+Danach konnte die Modellierung der imperativen und deklarativen Modelle der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT erfolgen. Nach einer kurzen Einführung und Analyse der Modelle wurde die imperative und deklarative Modellierung der selbigen dargelegt. Anschließend erfolgte jeweils der Vergleich der Modellierungen durch die definierten Kriterien. Abschließend wurde ein Vergleich zwischen allen modellierten Prozessmodellen anhand der Anforderungskriterien durchgeführt. \newline
+Die Ergebnisse zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle ergeben. Im Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich vor allem auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden jedoch sind diese im Prozessmodell selbst nicht visualisierbar. Zwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec, jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus, als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim interpretieren und modellieren der Modelle. \newline
+
+Die herausgearbeiteten Ergebnisse des Vergleiches wurden mit Hilfe einer Studie validiert. Zunächst wurden der Aufbau und der Ablauf der Studie genau erläutert. Weiterhin wurden die Ergebnisse der Studie präsentiert und ein Fazit gezogen. Hier wurden die Ergebnisse aus Kapitel 6 nochmals weitgehend bestätigt. Somit ist BPMN im Moment die geeignetere Modellierungssprache. Bei ConDec müsste noch nachgebessert werden um die Eignung zur Modellierung noch zu steigern.\newline
+
+
+\section{Ausblick}
+
+Im Laufe der Arbeit haben sich Ideen für weiter Forschungen im Bereich der Anwendbarkeit der imperativen und deklarativen Prozessmodellierungssprachen ergeben, welche jedoch in der vorliegenden Arbeit nicht fortgeführt werden konnten, da sie den Rahmen der Arbeit gesprengt hätten.\newline
+
+\textbf{Geistige Gewichte für ConDec Constraints}
+
+Um den Vergleich zwischen den in BPMN und ConDec erstellten Modellen zu optimieren, sollten ebenfalls genaue Werte über den geistigen Aufwand zum Verstehen der Constraints in ConDec erhoben werden. Wie in Kapitel 4 erwähnt, existieren solche Werte für die Elemente der BPMN Notation (z.B. eine geistige Gewichtung von 1 für ein Sequenzflusselement, eine geistige Gewichtung von 4 für ein paralleles Gateway). Da keine genauen geistigen Gewichte für die Constraints in ConDec vorliegen, war der Vergleich zwischen den Modellen in der vorliegenden Arbeit nur grob möglich. Ein exakter Vergleich wäre mit der genauen Gegenüberstellung der Summen der geistigen Gewichte der jeweiligen Elemente in den BPMN und ConDec Modellen möglich.\newline
+
+\textbf{Geistige Gewichte für verschiedene Elemente in Prozessmodellen}
+
+Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints.  
+
+
+\textbf{Erweiterung/Anpassung ConDec}
+
+Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newline
+Da auch vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
+Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline
+
+\textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}
+
+Wie bereits in Kapitel 7 erwähnt, weist die in dieser Arbeit durchgeführte Studie dahingehend Mängel auf, dass ein großer Teil der Teilnehmer bereits über Wissen in imperativen Prozessmodellierungssprachen verfügte. Hier sollten zukünftig noch weitere Studien durchgeführt werden, bei denen mehr Personen teilnehmen, die entweder keine Erfahrungen in beiden Prozessmodellierungssprachen aufweisen oder gleich viel Wissen in beiden Prozessmodellierungssprachen mitbringen.\newline
+
+
+
+
+
